# AuralisVoiceKit

./: .gitignore  BETA_CHECKLIST.md  BETA_EVIDENCE_REQUIREMENTS.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  CUSTOM_OUTPUT_BACKENDS.md  LICENSE  PILOTS.md  PILOT_FINDINGS.md  PRIVACY.md  PYPI.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  VERSIONING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: auralisvoicekit-api.html  auralisvoicekit-documentacion.html  index.html
examples/: assistant_loop.py  capture_microphone.py  capture_voice_segments.py  custom_output_backend.py  list_devices.py  local_assistant_privacy_demo.py  normalize_audio.py  pypi_quickstart.py  segment_wav.py  system_output_demo.py  transcribe_wav.py
src/auralis_voicekit/: __init__.py  _version.py  audio.py  (+12 more)
tests/: test_audio.py  test_benchmarks.py  test_beta_readiness.py  test_cli.py  test_config.py  test_diagnostics.py  test_docs.py  test_events.py  test_examples.py  test_ffmpeg_integration.py  test_kit.py  test_manual_pilot.py  test_models.py  test_openai_transcription_backend.py  test_output_pilot.py  test_pilot_audio_fixture.py  test_pilot_run.py  test_privacy.py  test_pyaudio_backend.py  test_release_batch_status.py  test_session.py  test_sounddevice_backend.py  test_stability_gate.py  test_system_output_backend.py  test_transcription_pilot.py  test_version.py  test_wasapi_backend.py  test_wav_backend.py  test_whisper_transcription_backend.py  test_windows_audio.py  test_workflows.py
tools/: beta_readiness.py  manual_pilot.py  output_pilot.py  pilot_audio_fixture.py  pilot_run.py  release_batch_status.py  stability_gate.py  transcription_pilot.py
(+11 files in other folders)
